adding focus state for buttons

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -3,10 +3,15 @@
 @mixin button {
   border: 0.125rem solid $buttonColor;
   background-color: $buttonAltColor;
-  border-radius: 0.25rem;
   color: $buttonColor;
   font-size: $button;
   cursor: pointer;
+
+  &:focus {
+    border: 0.125rem solid $buttonColorFocus;
+    outline: 0.5rem solid $buttonColorFocus;
+    border-radius: 0;
+  }
 
   &:disabled {
     color: $buttonDisabled;
