--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -8,6 +8,7 @@ $grey: #676767;
 $blue: #1b365d;
 $stone: #d6d2c4;
 $lightGrey: #eee;
+$yellow: #f2c75c;
 
 $backgroundColor: $white;
 $colorPrimary: $black;
@@ -17,6 +18,7 @@ $buttonColor: $blue;
 $buttonAltColor: $stone;
 $buttonDisabled: $grey;
 $buttonDisabledAlternative: $lightGrey;
+$buttonColorFocus: $yellow;
 
 //**********
 // typography
